--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
   flex-direction: column;
   height: 100vh;
   overflow-y: hidden;
+  font-size: 1.5em;
+}
+input {
+  font-size: 1em;
+}
+textarea {
+  font-size: 1.5em;
+}
+button {
+  font-size: 1em;
 }
 #mode-tabs > .modetab.active {
   background-color: color-mix(in srgb, white, yellow 10%);
