--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html><head><title>Joeapp</title><link rel="manifest" href="manifest.json"/><style>body {
+<!DOCTYPE html><head><title>Joeapp</title><link rel="manifest" href="manifest.json"/><meta name="viewport" content="initial-scale=1, width=device-width"/><style>body {
   display: flex;
   flex-direction: column;
   height: 100vh;
   overflow-y: hidden;
-  font-size: 1.5em;
+  font-size: 1.2em;
 }
 input {
   font-size: 1em;
@@ -103,6 +103,14 @@ button {
 .task > .top > * {
   margin-right: 1em;
 }
+.task .priority:before {
+  content: " (";
+  color: gray;
+}
+.task .priority:after {
+  content: ")";
+  color: gray;
+}
 .task > .bottom {
   display: flex;
   flex-direction: row;
@@ -118,4 +126,4 @@ button {
 }
 .task.overdue {
   background-color: color-mix(in srgb, white, red 10%);
-}</style><script src="./index.js"></script><template id="task-template"><div class="task"><div class="top"><span class="priority"></span><span class="due"></span><span class="frequency"></span><span class="duration"></span></div><div class="bottom"><div class="left"><button class="done">Done</button><button class="schedule">Schedule</button></div><p class="content"></p></div></div></template><template id="scheduled-template"><div class="scheduled-task"><div class="top"><div class="datestr"></div><div class="timetostr"></div><button class="unschedule">Unschedule</button></div><div class="task-spot"></div></div></template><body><div id="newtask-area"><div id="newtask-content-area"><div id="newtask-content-top"><span>Content</span><button id="new-add">Add</button></div><textarea id="new-content"></textarea></div><table id="newtask-options-area"><colgroup><col id="new-inputs-cols" span="1"/><col id="new-parsed-cols" span="1"/><col id="new-labels-cols" span="1"/></colgroup><tbody><tr><td><input id="new-frequency" type="text"/></td><td><div class="new-parsed" id="new-frequency-parsed"></div></td><td><span>Frequency</span></td></tr><tr><td><input id="new-base-priority" type="number" value="1"/></td><td><div class="new-parsed" id="new-base-priority-parsed"></div></td><td><span>Priority</span></td></tr><tr><td><input id="new-due" type="text"/></td><td><div class="new-parsed" id="new-due-parsed"></div></td><td><span>Due</span></td></tr><tr><td><input id="new-duration" type="text"/></td><td><div class="new-parsed" id="new-duration-parsed"></div></td><td><span>Duration</span></td></tr><tr><td><input id="new-autoschedule" type="checkbox"/></td><td><span></span></td><td><span id="new-autoschedule-text">Schedule?</span></td></tr></tbody></table></div><details id="all-tasks-container" open="open"><summary>All tasks</summary><div id="all-tasks-and-search"><input type="text" id="task-search"/><div id="all-tasks"></div></div></details><details id="scheduled-container" open="open"><summary>Scheduled</summary><button id="reschedule-all">Reschedule all</button><div id="scheduled"></div></details><div id="due-tasks"></div></body></head>
+}</style><script src="./index.js"></script><template id="task-template"><div class="task"><div class="top"><span><span class="basepriority"></span><span class="priority"></span></span><span class="due"></span><span class="frequency"></span><span class="timeto"></span><span class="duration"></span></div><div class="bottom"><div class="left"><button class="done">Done</button></div><p class="content"></p></div></div></template><template id="scheduled-template"><div class="scheduled-task"><div class="top"><div class="datestr"></div><div class="timetostr"></div><button class="unschedule">Unschedule</button></div><div class="task-spot"></div></div></template><body><div id="newtask-area"><div id="newtask-content-area"><div id="newtask-content-top"><span>Content</span><button id="new-add">Add</button></div><textarea id="new-content"></textarea></div><table id="newtask-options-area"><colgroup><col id="new-inputs-cols" span="1"/><col id="new-parsed-cols" span="1"/><col id="new-labels-cols" span="1"/></colgroup><tbody><tr><td><input id="new-frequency" type="text"/></td><td><div class="new-parsed" id="new-frequency-parsed"></div></td><td><span>Frequency</span></td></tr><tr><td><input id="new-base-priority" type="number" value="1"/></td><td><div class="new-parsed" id="new-base-priority-parsed"></div></td><td><span>Priority</span></td></tr><tr><td><input id="new-due" type="text"/></td><td><div class="new-parsed" id="new-due-parsed"></div></td><td><span>Due</span></td></tr><tr><td><input id="new-duration" type="text"/></td><td><div class="new-parsed" id="new-duration-parsed"></div></td><td><span>Duration</span></td></tr></tbody></table></div><input type="text" id="task-search"/><div id="all-tasks"></div></body></head>
